🚧 Resolved dependabot issue. Added sticky behaviour to filters on mobile devices.

--- a/components/styles.module.css
+++ b/components/styles.module.css
@@ -126,7 +126,7 @@
 .footer {
   display: flex;
   align-items: center;
-  position: absolute;
+  position: fixed;
   height: 4.2rem;
   bottom: 6%;
   left: 0;
